refactoring crud de address (#2)
Co-authored-by: jacksJacksonBispodeNovaes <jackson.novaes@bitz.com.br>